k8s/istio/virtual-service-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cart-retry
  namespace: yas
spec:
  hosts:
  - cart
  http:
  - route:
    - destination:
        host: cart
        port:
          number: 80
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,connect-failure,refused-stream"
