k8s/istio/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: cart-auth-policy
  namespace: yas
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cart
  action: ALLOW
  rules:
  - from:
    - source:
        principals: 
        - "cluster.local/ns/yas/sa/product"
        - "cluster.local/ns/yas/sa/backoffice-bff"
